[tool.poetry]
name = "hammar-systems"
version = "0.1.0"
description = ""
authors = ["Andrei Kulakov <kulakov1@tut.by>"]
readme = "README.md"
packages = [{include = "hammar_systems"}]

[tool.poetry.dependencies]
python = "^3.11"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
